syntax = "proto3";

package user;
option go_package = "rpc/user;userpb";

import "commonpb/common.proto";

service UserService {
  // 用户登录
  rpc Register (RegisterReq) returns (common.Empty);
  // 用户注册
  rpc Login (LoginReq) returns (LoginRep);
  // 修改用户信息
  rpc UpdateUserInfo (UpdateUserInfoReq) returns (common.Empty);
  // 修改用户密码
  rpc UpdateUserPasswd (UpdateUserPasswdReq) returns (common.Empty);
}

message UpdateUserPasswdReq {
  string email = 1;
  string oldPasswd = 2;
  string newPasswd = 3;
}

message UpdateUserInfoReq {
  int64 id = 1;
  string email = 2;
  string username = 3;
}

message RegisterReq {
  string email = 1;
  string username = 2;
  string passwd = 3;
  string confirmPasswd = 4;
}

message LoginReq {
  string email = 1;
  string passwd = 2;
}
message LoginRep {
  int64 id = 1;
  string email = 2;
  string username = 3;
}
